--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="main-container">
         <div id="video-container">
             <video muted id="bg-vid" width="1080" height="720">
-                <source src="assets/DraftLV.mp4" type="video/mp4">
+                <source src="assets/DraftLV.webm" type="video/webm">
                 <!-- <source src="assets/video.mov" type="video/mp4"> -->
                 Your browser does not support the video tag.
             </video>
