--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
         <img src="./assets/Candle.png" />
     </div>
 
+    <div id="onboarding-btn">i</div>
+    <div id="onboarding">
+        <div id="onboarding-close">x</div>
+        <h1>Is it lost on you?</h1>
+        <p>Click on the video to play the music.</p>
+    </div>
+
 </body>
 
 </html>
