--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
         <div id="canvas-container">
             <!-- p5 canvas will be appended here. -->
         </div>
+
+        <div id="bubbles-container">
+            
+        </div>
     </div>
 
     <!-- add your objects -->
