--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
     <div id="onboarding-btn">i</div>
     <div id="onboarding">
         <div id="onboarding-close">x</div>
-        <h1>Is it lost on you?</h1>
-        <p>Click on the video to play the music.</p>
+        <h1>IS IT LOST ON YOU?</h1>
+        <p>This is an interactive music video for my song, "Is it lost on you?"</p>
+        <p>Click and/or drag to interact with the audio and visuals.</p>
     </div>
 
 </body>
